--- a/templates/kraken/configuration/compare.twig
+++ b/templates/kraken/configuration/compare.twig
@@ -41,7 +41,7 @@
 {% block comparison %}
 
     {% if diffs %}
-        <table class="table--spacing-medium table--top-aligned trailer" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped table--top-aligned trailer" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th>Property</th>
@@ -54,9 +54,9 @@
                     <tr>
                         <td>
                             {% if diff.schema %}
-                                <code>{{ diff.schema.key }}</code>
+                                <code class="code_clear">{{ diff.schema.key }}</code>
                             {% elseif diff.configuration %}
-                                <code>{{ diff.configuration.key }}</code>
+                                <code class="code_clear">{{ diff.configuration.key }}</code>
                             {% endif %}
                         </td>
 
