--- a/templates/kraken/configuration/latest/property.twig
+++ b/templates/kraken/configuration/latest/property.twig
@@ -52,7 +52,7 @@
 {% block property_history %}
 
     {% if history %}
-        <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
             <thead>
                 <tr>
                     <th class="t20">Deployed Config</th>
