--- a/sass/patterns/_list.scss
+++ b/sass/patterns/_list.scss
@@ -14,13 +14,13 @@
 }
 
 // Inline list
-[class="inline-list"], [class^="inline-list--"] {
+.inline-list, [class^="inline-list--"] {
     margin-left: 0;
     display: inline;
     list-style-type: none;
 }
 
-[class="inline-list"] > li, [class^="inline-list--"] > li {
+.inline-list > li, [class^="inline-list--"] > li {
     display: inline;
 }
 
