--- a/templates/kraken/configuration/compare.twig
+++ b/templates/kraken/configuration/compare.twig
@@ -6,8 +6,6 @@
 
 {% block content %}
 
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('kraken.status', {application: application.id}) }}">Back to Application Configuration</a></p>
-
     <h1>Compare Latest to {{ is_deployed ? 'Deployed Configuration' : 'Previous Configuration' }}</h1>
 
     <h4>Application</h4>
@@ -16,17 +14,16 @@
     <h4>Environment</h4>
     <p>{{ configuration.environment.name }}</p>
 
-    <h4>Status</h4>
-    <p>
-        {% if is_deployed %}
-            {{ macros.status('Currently Deployed', 'success', 'tick') }}
-        {% else %}
-            Not Active
-        {% endif %}
-    </p>
+    <h4>Configuration ID</h4>
+    <p>{{ configuration.id }}</p>
 
-    <h4>Time Deployed</h4>
-    <p>{{ configuration.created|html5date }}</p>
+    <ul class="button-list">
+        <li><a class="btn" href="{{ urlFor('kraken.configuration', {application: application.id, configuration: configuration.id}) }}">Configuration {{ configuration.id[:7] }}</a></li>
+        <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Configuration</a></li>
+        <li><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration.history.page1', {application: application.id}) }}">Configuration History</a></li>
+    </ul>
+
+    {% include 'kraken/partial/configuration.status.twig' %}
 
     <h2>Configuration Comparison</h2>
     {% if target %}
@@ -36,7 +33,6 @@
     {% endif %}
 
 {% endblock %}
-
 
 {% block comparison %}
 
