--- a/templates/kraken/environment.add.twig
+++ b/templates/kraken/environment.add.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Add Environment" %}
 
 {% block content %}
-    <h1>Add Environment</h1>
+    <h1>{{ page_title }}</h1>
 
     <div class="form-wrapper">
         {% if errors %}
