--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <h1>Application Configuration for <strong>{{ application.name }}</strong></h1>
+    <h1>{{ page_title }} for <strong>{{ application.name }}</strong></h1>
 
     <h2>Environments</h2>
     {{ block('environment_targets') }}
@@ -45,13 +45,19 @@
                         <section class="card__details">
                             <ul class="split">
                                 <li>
-                                    <span class="split__title">Config:</span>
+                                    <span class="split__title">Snapshot:</span>
                                     {% if deployed %}
-                                        <a href="{{ urlFor('kraken.configuration', {application: application.id, configuration: deployed.id})}}">{{ deployed.id[:7] }}</a>
+                                        {% if deployed.isSuccess %}
+                                            {{ macros.status_icon('Success', 'success') }}
+                                        {% else %}
+                                            {{ macros.status_icon('Error', 'error') }}
+                                        {% endif %}
+                                        (<a href="{{ urlFor('kraken.configuration', {application: application.id, configuration: deployed.id})}}">{{ deployed.id[:7] }}</a>)
                                     {% else %}
                                         None
                                     {% endif %}
                                 </li>
+
                                 <li>
                                     <span class="split__title">Deployed on:</span>
                                     {% if deployed.created %}
@@ -65,26 +71,12 @@
                                     {% if deployed.user %}
                                         <a href="{{ urlFor('user', {id: deployed.user.id}) }}">{{ deployed.user.handle }}</a>
                                     {% else %}
-                                        Unknown
-                                    {% endif %}
-                                </li>
-                                <li>
-                                    <span class="split__title">Consul Status:</span>
-                                    {% if deployed %}
-
-                                        {% if checksum_status[deployed.id] %}
-                                            Confirmed
-                                        {% else %}
-                                            Out of Sync
-                                        {% endif %}
-
-                                    {% else %}
-                                        N/A
+                                        No one
                                     {% endif %}
                                 </li>
                             </ul>
 
-                            <p class="mbn">
+                            <p class="leader--napolean trailer--napolean">
                                 <a class="btn btn--small" href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: target.environment.id})}}">Latest Configuration</a>
                             </p>
                         </section>
