--- a/templates/kraken/configuration/deploy.twig
+++ b/templates/kraken/configuration/deploy.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <h1>Deploy Configuration</h1>
+    <h1>{{ page_title }}</h1>
 
     <h4>Application</h4>
     <p>{{ application.name }}</p>
