--- a/templates/kraken/configuration/history.twig
+++ b/templates/kraken/configuration/history.twig
@@ -20,7 +20,7 @@
     <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                <th>Configuration</th>
+                <th>Snapshot</th>
                 <th>Env</th>
                 <th>User</th>
                 <th>Time</th>
