Add consul checksum status to deployed snapshot page

--- a/templates/kraken/partial/configuration.status.twig
+++ b/templates/kraken/partial/configuration.status.twig
@@ -12,7 +12,7 @@
             {% endif %}
         </dd>
 
-        <dt class="split__title">Consul Status</dt>
+        <dt class="split__title">Consul</dt>
         <dd>
             {% if is_deployed %}
                 {{ macros.status('Currently Deployed', 'success', 'tick') }}
