--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -59,7 +59,7 @@
                                 </li>
 
                                 <li>
-                                    <span class="split__title">Deployed on:</span>
+                                    <span class="split__title">Time:</span>
                                     {% if deployed.created %}
                                         {{ deployed.created|html5date }}
                                     {% else %}
