--- a/templates/kraken/configuration/compare.twig
+++ b/templates/kraken/configuration/compare.twig
@@ -18,8 +18,11 @@
     <p>{{ configuration.id }}</p>
 
     <ul class="button-list">
-        <li><a class="btn" href="{{ urlFor('kraken.configuration', {application: application.id, configuration: configuration.id}) }}">Configuration {{ configuration.id[:7] }}</a></li>
         <li><a class="btn" href="{{ urlFor('kraken.status', {application: application.id}) }}">Application Configuration</a></li>
+        <li><a class="btn" href="{{ urlFor('kraken.configuration', {application: application.id, configuration: configuration.id}) }}">Configuration {{ configuration.id[:7] }}</a></li>
+
+        <li><a class="btn" href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: configuration.environment.id}) }}">Latest Configuration</a></li>
+
         <li><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration.history.page1', {application: application.id}) }}">Configuration History</a></li>
     </ul>
 
