--- a/templates/kraken/partial/configuration.status.twig
+++ b/templates/kraken/partial/configuration.status.twig
@@ -24,7 +24,7 @@
         <dt class="split__title">Time</dt>
         <dd>{{ configuration.created|html5date }}</dd>
 
-        <dt class="split__title">Initiator</dt>
+        <dt class="split__title">Deployed by</dt>
         <dd class="js-build-duration">
             {% if configuration.user %}
                 <a href="{{ urlFor('user', {id: configuration.user.id}) }}">{{ configuration.user.handle }}</a>
