--- a/templates/kraken/application.add.twig
+++ b/templates/kraken/application.add.twig
@@ -22,9 +22,9 @@
                 {% if available %}
                 <li>
                     <label for="app-repo">
-                        HAL Repository
+                        HAL Application
                         <small class="additional">
-                            Link a HAL repository to this Kraken application. Recommended for applications already using HAL 9000.
+                            Link a HAL application to this Kraken application. Recommended for applications already using HAL 9000.
                         </small>
                     </label>
 
@@ -58,7 +58,7 @@
                     <label for="app-name">
                         Name
                         <small class="additional">
-                            Optional when linking to a HAL repository.
+                            Optional when linking to a HAL application.
                         </small>
                     </label>
                     <input type="text" name="name" id="app-name" maxlength="64" value="{{ form.name }}" class="text-input">
