Add link to kraken from hal status, change repo to application in hal nomenclature in a few spots

--- a/sass/app/_js.tablesaw.scss
+++ b/sass/app/_js.tablesaw.scss
@@ -153,6 +153,12 @@ CUSTOM OVERRIDES
             margin-top: 2.5em;
         }
     }
+
+    .tablesaw-stack.table--striped {
+        tbody tr:nth-of-type(odd) {
+            background-color: transparent;
+        }
+    }
 }
 
 @media (min-width: 40em) {
