--- a/templates/repository/deployments.twig
+++ b/templates/repository/deployments.twig
@@ -3,12 +3,12 @@
 {% set page_title = repository.name ~ ' deployments' %}
 
 {% block content %}
-    <h2>Deployment Relationships for <b>{{ repository.name }}</b> </h2>
+    <h2>Deployment Targets for <b>{{ repository.name }}</b> </h2>
 
     <p><a class="btn btn--small btn--back" href="{{ urlFor('repository', {'id': repository.id}) }}">Back to Repository</a></p>
 
     <p>
-        Deployment relationships define what servers your application can be deployed to and where on that server the code will be uploaded.
+        Deployment targets define what servers your application can be deployed to and where on that server the code will be uploaded.
     </p>
 
     {% set canEdit = isUserRepoAdmin(currentUser, repository.key) %}
