--- a/templates/partials/layout.header.twig
+++ b/templates/partials/layout.header.twig
@@ -32,12 +32,7 @@
                         {{ nav_macros.optionalNavlink('Dashboard', 'dashboard', 'dashboard') }}
                         {{ nav_macros.optionalNavlink('Queue', 'queue', 'in') }}
 
-                        {# todo, remove this. groups page is no longer supported. #}
-                        {% if not isNavOn('repositories') %}
-                            {{ nav_macros.optionalNavlink('Repositories', 'groups', 'list') }}
-                        {% endif %}
-
-                        {{ nav_macros.optionalNavlink('Repositories', 'repositories', 'list') }}
+                        {{ nav_macros.optionalNavlink('Applications', 'repositories', 'list') }}
 
                         {{ nav_macros.optionalNavlink('Servers', 'servers', 'server') }}
                         {{ nav_macros.optionalNavlink('Environments', 'environments', 'leaf') }}
@@ -47,6 +42,7 @@
                             {{ nav_macros.optionalNavlink('Admin', 'admin', 'watch') }}
                         {% endif %}
                         {{ nav_macros.optionalNavlink('Help', 'help', 'question') }}
+                        {{ nav_macros.optionalNavlink('Kraken', 'kraken', 'asterisk') }}
 
                         <li>{{ nav_macros.navlink('Settings', 'settings', 'settings') }}</li>
                         <li>{{ nav_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
