--- a/templates/kraken/application/application.twig
+++ b/templates/kraken/application/application.twig
@@ -26,6 +26,9 @@
             <dt class="split__title">Application</dt>
             <dd>{{ application.name }}</dd>
 
+            <dt class="split__title">Application ID</dt>
+            <dd>{{ application.id[:7] }}</dd>
+
             <dt class="split__title">Core ID</dt>
             <dd>{{ application.coreId }}</dd>
 
