--- a/templates/kraken/configuration/compare.twig
+++ b/templates/kraken/configuration/compare.twig
@@ -44,7 +44,7 @@
             <thead>
                 <tr>
                     <th>Property</th>
-                    <th class="t40">Deployed Snapshot</th>
+                    <th class="t40">Snapshot</th>
                     <th class="t40">Latest</th>
                 </tr>
             </thead>
