--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -7,6 +7,7 @@ $font-unit: 1em;
 $base-font-size: 1.1em;
 $base-line-height: 1.4em;
 $heading-font-stack: helvetica, arial, sans-serif;
+$sans-serif-font-stack: "Helvetica Neue", helvetica, arial, sans-serif;
 
 $min-line-padding: .1em;
 
@@ -30,3 +31,6 @@ $h3-size: ms(3);
 $h4-size: ms(2);
 $h5-size: ms(1);
 $h6-size: ms(0);
+
+// Primer CSS - tooltips
+$body-font: $sans-serif-font-stack;
