--- a/templates/kraken/partial/configuration.twig
+++ b/templates/kraken/partial/configuration.twig
@@ -2,72 +2,76 @@
 {% import "kraken/partial/macros.twig" as kraken_macros %}
 
 {% if properties %}
+
+    {% set is_snapshot = properties|first is configurationProperty ? true : false %}
+
     <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                {% if show_property_link or is_deployed %}
-                    <th></th>
-                {% endif %}
                 <th>Property</th>
                 <th class="t15">Type</th>
                 <th>Value</th>
+                {% if not is_snapshot %}
+                    <th></th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
             {% for property in properties %}
 
-                {% if property is diff %}
-                    {% set property = property.property ? property.property : property.schema %}
-                {% endif %}
-
                 <tr>
-                    {% if property is property %}
+                    {% if is_snapshot %}
 
-                        {% if show_property_link %}
-                            <td>
-                                <a href="{{ urlFor('kraken.property', {property: property.id}) }}">
-                                    {{ macros.icon('list') }}
-                                    <span class="tablesaw-collapse">Manage Property Schema</span>
-                                </a>
-                            </td>
-
-                        {% endif %}
-
-                        <td><code class="code_clear">{{ property.schema.key }}</code></td>
-                        <td>{{ property.schema|formatSchemaType }}</td>
-
-                        <td>{{ kraken_macros.renderProperty(property) }}</td>
-
-                    {% elseif property is configurationProperty %}
-
-                        {% if show_property_link or is_deployed %}
-                            <td>
+                        <td class="fixed-nobreak">
+                            {% if is_deployed %}
                                 {% if checksums[property.key] == property.checksum %}
-                                    {{ macros.status_icon('', 'success', {title: 'Verified'}) }}
-                                    <span class="tablesaw-collapse">Verified</span>
+                                    <span class="tooltipped" aria-label="Verified">{{ macros.status_icon('', 'success') }}</span>
                                 {% else %}
-                                    {{ macros.status_icon('', 'error', {title: 'Missing or different from consul backend'}) }}
-                                    <span class="tablesaw-collapse">Missing or different from consul backend</span>
+                                    <span class="tooltipped" aria-label="Missing or different from consul backend">{{ macros.status_icon('', 'error') }}</span>
                                 {% endif %}
-                            </td>
-                        {% endif %}
+                            {% endif %}
 
-                        <td><code class="code_clear">{{ property.key }}</code></td>
+                            <code class="code_clear">{{ property.key }}</code>
+                        </td>
                         <td>{{ property|formatSchemaType }}</td>
 
                         <td>{{ kraken_macros.renderProperty(property) }}</td>
 
                     {% else %}
-                        {% if show_property_link %}
-                            <td></td>
+
+                        {% if property is diff %}
+                            {% set property = property.property ? property.property : property.schema %}
                         {% endif %}
 
-                        <td><code class="code_clear">{{ property.key }}</code></td>
-                        <td>{{ property|formatSchemaType }}</td>
+                        {% if property is property %}
 
-                        <td>
-                            {{ macros.status('Missing', 'error', 'spam-2') }}
-                        </td>
+                            <td><code class="code_clear">{{ property.schema.key }}</code></td>
+                            <td>
+                                {{ property.schema.isSecure ? macros.icon('locked') : '' }}
+                                {{ property.schema|formatSchemaType }}
+                            </td>
+
+                            <td>{{ kraken_macros.renderProperty(property) }}</td>
+
+                            <td class="fixed-nobreak">
+                                <a href="{{ urlFor('kraken.property', {property: property.id}) }}">View History</a>
+                            </td>
+
+                        {% else %}
+                            <td><code class="code_clear">{{ property.key }}</code></td>
+                           <td>
+                                {{ property.isSecure ? macros.icon('locked') : '' }}
+                                {{ property|formatSchemaType }}
+                            </td>
+
+                            <td>
+                                {{ macros.status('Missing', 'error', 'spam-2') }}
+                            </td>
+                            <td>
+                                <span class="tablesaw-collapse">History not available</span>
+                            </td>
+                        {% endif %}
+
                     {% endif %}
 
                 </tr>
