Add more placheolder faqs

--- a/templates/kraken/help.twig
+++ b/templates/kraken/help.twig
@@ -43,6 +43,8 @@
         <li class="trailer">
             <a href="#technical"><b>Technical Questions</b></a>
             <ul class="list--bullet">
+                <li><a href="#consul">What is Consul?</a></li>
+                <li><a href="#consul-agent">What is the Consul agent?</a></li>
                 <li><a href="#whats-your-stack-bro">What form does the data take at rest?</a></li>
             </ul>
         </li>
@@ -51,6 +53,7 @@
 {% endblock %}
 
 {% block kraken_usage %}
+
     <h4 id="add-application">How do I add my application to Kraken?</h4>
     <p>tbd</p>
 
@@ -77,6 +80,13 @@
 {% endblock %}
 
 {% block technical_questions %}
+
+    <h4 id="consul">What is Consul?</h4>
+    <p>tbd</p>
+
+    <h4 id="consul-agent">What is the Consul agent?</h4>
+    <p>tbd</p>
+
     <h4 id="whats-your-stack-bro">What form does the data take at rest?</h4>
     <p>tbd</p>
 
